# axum_be

back_end/: Cargo.toml
front_end/: package-lock.json  package.json  svelte.config.js
front_end/src/: app.css
front_end/src/routes/auth/login/: +page.svelte
